force-app/main/default/objects/ECT_Certificate_Pre_Review__c/ECT_Certificate_Pre_Review__c.object-meta.xml
<CustomObject>
    <label>Certificate Pre-Review</label>
    <nameField>
        <displayFormat>CPR-{000000}</displayFormat>
        <label>Certificate Pre-Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificate Pre-Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>