force-app/main/default/objects/ECT_Certificate_Pre_Review__c/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,  ECT_State__r.Name  &amp;&quot;: &quot;&amp; TEXT(Certificate_Type__c) , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate</label>
    <type>Text</type>
</CustomField>