force-app/main/default/objects/ECT_Certificate_Pre_Review__c/fields/Contact_s_State__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact&apos;s State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>