force-app/main/default/objects/ECT_Certificate_Pre_Review__c/fields/Date_Contacted_State_POC__c.field-meta.xml
<CustomField>
    <fullName>Date_Contacted_State_POC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Contacted State POC:</label>
    <type>Date</type>
</CustomField>