force-app/main/default/objects/ECT_Certificate_Pre_Review__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>