force-app/main/default/objects/ECT_Certificate_Pre_Review__c/fields/ECT_State__c.field-meta.xml
<CustomField>
    <fullName>ECT_State__c</fullName>
    <label>State</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ECT_State__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ECT_State__c</referenceTo>
    <relationshipLabel>Certificate Pre-Reviews</relationshipLabel>
    <relationshipName>Certificate_Pre_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>