force-app/main/default/objects/ECT_Certificate_Pre_Review__c/fields/FileVersion__c.field-meta.xml
<CustomField>
    <fullName>FileVersion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FileVersion</label>
    <length>2</length>
    <type>Text</type>
</CustomField>