force-app/main/default/objects/ECT_Certificate_Pre_Review__c/fields/FL_Pre_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>FL_Pre_Review_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FL Pre-Review Comments:</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>