force-app/main/default/objects/ECT_Certificate_Pre_Review__c/fields/Pre_Review_Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>Pre_Review_Assigned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre-Review Assigned By:</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Certificate_Pre_Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>