force-app/main/default/objects/ECT_Certificate_Pre_Review__c/fields/Pre_Review_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Pre_Review_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre-Review Assigned To:</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Certificate_Pre_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>