force-app/main/default/objects/ECT_Certificate_Pre_Review__c/fields/Pre_Review_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Review_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pre-Review End Date:</label>
    <type>Date</type>
</CustomField>