force-app/main/default/objects/ECT_Certificate_Pre_Review__c/fields/State_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,  ECT_State__r.Name  , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Name</label>
    <type>Text</type>
</CustomField>