force-app/main/default/objects/ECT_Certificate_Pre_Review__c/fields/State_POC_Comment__c.field-meta.xml
<CustomField>
    <fullName>State_POC_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State POC Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>