force-app/main/default/objects/ECT_Certificate_Pre_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ECT_State__c</columns>
    <columns>Certificate_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Pre_Review_Assigned_To__c</columns>
    <columns>Pre_Review_Start_Date__c</columns>
    <columns>Pre_Review_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Certificate_Type__c</field>
        <operation>equals</operation>
        <value>Certificate of Ascertainment</value>
    </filters>
    <label>All</label>
    <sharedTo>
        <group>ECT_NARA_Super_Users</group>
        <group>ECT_OFR_Legal_Users</group>
    </sharedTo>
</ListView>