force-app/main/default/objects/ECT_Certificate_Pre_Review__c/listViews/Pre_Review_in_Progress.listView-meta.xml
<ListView>
    <fullName>Pre_Review_in_Progress</fullName>
    <columns>NAME</columns>
    <columns>ECT_State__c</columns>
    <columns>Certificate_Type__c</columns>
    <columns>Date_Received__c</columns>
    <columns>Pre_Review_Assigned_To__c</columns>
    <columns>Pre_Review_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pre_Review_End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Pre-Review in Progress</label>
    <sharedTo>
        <group>ECT_NARA_Super_Users</group>
        <group>ECT_OFR_Legal_Users</group>
    </sharedTo>
</ListView>