force-app/main/default/objects/ECT_Certificate_Pre_Review__c/listViews/State_Certificate_Pre_Reviews.listView-meta.xml
<ListView>
    <fullName>State_Certificate_Pre_Reviews</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Pre_Review_Assigned_To__c</columns>
    <columns>Pre_Review_Start_Date__c</columns>
    <columns>Pre_Review_End_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>Certificate Pre-Reviews Submitted by Me</label>
    <sharedTo>
        <group>ECT_State_Users</group>
    </sharedTo>
</ListView>